# cpp-prep

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  vizio.md
src/algorithm/: CMakeLists.txt  README.md
src/algorithm/array/: 125.h  1512.h  1512_combination.h  167.h  26.h  27.h  283.h  344.h  5.h  680_twopointers.h
src/algorithm/backtracking/: 1947_swap_make_branch_choice.h  CMakeLists.txt
src/algorithm/bfs/: 301.cpp  CMakeLists.txt
src/algorithm/binarysearch/: 1586_iterator.h  34_twobounds.h  CMakeLists.txt
src/algorithm/binarytree/: CMakeLists.txt
src/algorithm/bitmanip/: 201.h  CMakeLists.txt  README.md  add.h
src/algorithm/blind75/: 100_binary_tree_divide_and_conq_recursive.h  102_bfs.h  104_binarytree_traverse_backtracking.h  105_binary_tree_recursive.h  106_rebuild_post_inorder_dfs.h  11_container_brutalforce.h  11_container_twopointers.h  121_buysell_stock.h  124_tree_postorder_traversal.h  1254_island.h  125_two_pointers.h  128_longest_increasing_seq_unionset.h  130_dfs_solver.h  133_clonegraph_dfs.h  143_list_stack.h  152_subarray_dp1d.h  152_subarray_product_slidingwindow.h  153_rotate_sort_array_binarysearch.h  15_3sum.h  190_reverse_bit.h  19_fast_slow_two_pointers.h  1_2sum_binarysearch.h  1_2sum_multimap.h  1_2sum_multipair.h  1_2sum_twopointers.h  200_num_islands.h  206_list_stack.h  208_trie.h  20_stack.h  211_trie_preorder.h  212_trie_backtracking.h  217_cache.h  217_sort.h  21_list_merge_two_list.h  226_invert_recursive.h  230_bst_inorder_recursive_counter.h  235_bst_recursive.h  238_prefix_suffix_array.h  23_list_merge_three_sorted_listpq.h  242_unicode.h  (+36 more)
src/algorithm/blind75_iteration_nov_24/: 1143_dp_lcs.h  11_twopointers_water.h  121_stock.h  128_unionfind_lcs.h  133_bfs_clone_graph.h  139_dp_wordbreak.h  153_binarysearch.h  198_dp_house_robber,h  1_array_2sum.h  200_island.h  207_topologysort_courseschedule.h  238.h  261_valid_tree.h  269_topo_aliendict.h  300_dp_lis.h  322_dp_coinchange.h  323_backtracking_graph_components.h  33_binarysearch.h  377_combinationsum.h  417.h  53_slidingwindow.h  56_mergeoverlap.h  57_insert_interval.h  62_dp_uniquepath.h  70_dp_climbing_stairs.h
src/algorithm/blind75_itr2/: 1143_lcs_dp_bottom_up.h  1143_lcs_dp_memo.h  11_rain_area_twopointer.h  121_dp_stock_1buy.h  139_word_break_dp.h  152_DP_overflow.h  152_subarray_slidewindow.h  153_rotated_sorted_array_two_ptr.h  15_3sum.h  190_bitmask.h  191_binary_manip_logicAnd.h  1_2sum_twopointer.h  217_hashmap.h  238_prefix_suffix.h  268_missingnumber_bitxo.h  268_missingnumber_math.h  300_lis_dp.h  322_coin_change_bottomup.h  322_coin_change_memo.h  322_coin_change_memo_fast.h  33_rotated_sorted_array_search.h  53_slide_window.h  70_1d_dp.h
src/algorithm/capitalone/: 121_buysellstock.h  2043_bank.h  2619.h  415.h  723_candy.h
src/algorithm/combinatorics/: CMakeLists.txt
src/algorithm/diffarray/: 1094.h  1109_airline.h  370.h
src/algorithm/graph/: 1236_bfs.h  1236_dfs.h  1245_dfs_node.h  1976_dijaksra.cpp  207_dfs_cycle.h  210_bfs_topo_cycle.h  210_dfs_topo_cycle.h  2685_bfs_logic.h  277.h  310_findMinHeightTrees_backtracking.h  310_topo.h  797_dfs.h  CMakeLists.txt  findMinHeightTrees.h
src/algorithm/hashfunction/: CMakeLists.txt
src/algorithm/hashmap/: 1357.h
src/algorithm/linkedlist/: 141.h  142.h  160.h  1650_tree_as_linkedlist.h  19.h  23.h  86.h  876.h
src/algorithm/math/: 1453_circle_points.h
src/algorithm/meta/: 209_subarray.h  3364_subarray.h
src/algorithm/monotonic/: CMakeLists.txt
src/algorithm/prefixsum/: 303_immutable_query.h  304_2d_matrix_query.h  764_2d_4_dir_prefixsum.h
src/algorithm/priorityqueue/: twitter.h
src/algorithm/queue&stack/: 225_stack_adt.h  232_queue_adt.h
src/algorithm/quickSelect/: CMakeLists.txt
src/algorithm/sorting/: 1033.h  99_recover_binary_tree.h  CMakeLists.txt  sort_swapped_array.h
src/algorithm/string/: 1108.h  1249.h  2452.h  2553.h
src/algorithm/suffixarray/: CMakeLists.txt
src/async.programming/: CMakeLists.txt
src/async.programming/boost.asio/: CMakeLists.txt
src/async.programming/simple.future/: CMakeLists.txt  bootstrap.cpp
src/behavior/: README.md
src/core/: CMakeLists.txt  db.cpp  db.h  jthread.h  logger.cpp  logger.h
src/core/container/: CMakeLists.txt  dlistthreadsafe.h  finegrainedhashmapthreadsafe.h  forwardlistthreadsafe.h  hetrogenousmap.h  mapthreadsafe.h  meta.h  queuethreadsafe.h  stackthreadsafe.cpp  stackthreadsafe.h
src/core/cuda/: CMakeLists.txt  cuDevice.cu  cuDevice.h  cuPredefines.h  mathUtils.cu  mathUtils.h
src/core/custom_type_trait/: CMakeLists.txt  smartpointer.cpp  smartpointer.h
src/core/db/: CMakeLists.txt  db.cpp  db.h
src/core/eda/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  event.h  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
src/core/thread/: CMakeLists.txt  jthread.cpp  jthread.h  swapthreadsafe.h  thread_factory.h
src/core/utility/: CMakeLists.txt  helper.cpp  helper.h  logger.cpp  logger.h
src/coroutine/: CMakeLists.txt
src/coroutine/basic/: CMakeLists.txt  bootstrap.cpp
src/coroutine/boost.asio/: CMakeLists.txt
src/coroutine/streamer/: CMakeLists.txt  bootstrap.cpp
src/cuda/: CMakeLists.txt  README.md  intro.md
src/cuda/0_vector_add/: kernel.h  (+3 more)
src/design/: CMakeLists.txt  README.md  adapter.h  bootstrap.cpp  bridge.cpp  bridge.h  command.h  common.h  decorator.h  depinversion.h  model.h  observer.h  openclose.h  strategy.h  testable.h  visitor.h
src/fp/: CMakeLists.txt  README.md
src/math/: README.md
src/moderncpp/: CMakeLists.txt  README.md  arch.md  array.md  basictypes.h  bootstrap.cpp  concurrent.h  concurrent.md  entity.md  enum.md  enums.h  functions.h  functions.md  literal.md  memory.h  memorymgr.md  parallel.md  procpp.md  refactoringc++.md  shared.h  smartpointer.h  strings.h  strings.md  templatemeta.h  templatemeta.md  type.md  type_limits.md
src/multithreading/: CMakeLists.txt  README.md
src/ood/: CMakeLists.txt
src/systemprog/: CMakeLists.txt  README.md
src/unicode/: CMakeLists.txt  example.txt  utf-convert.cpp  utf_boost.cpp
src/webrtc/: readme.md
(+187 files in other folders)
